changed homepage layout and style

--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -8,7 +8,7 @@
     <div class="container d-flex flex-column">
         <div class="row align-items-center min-vh-100">
             <div class="col-md-10 col-lg-7 col-xl-8 mt-5 mt-lg-0">
-                <span class="display-28 letter-spacing-2 d-block mb-1-6 text-primary fw-bold">Simple. Transparent. Secure.</span>
+                <span class="display-28 letter-spacing-2 d-block mb-1-6  fw-bold colorban">Simple. Transparent. Secure.</span>
                 <h1 class="text-white display-16 display-sm-14 display-md-9 display-lg-7 display-xl-3 lh-1 mb-2-3 text-shadow"><span class="fw-bolder">Building a brilliant</span> monetary future</h1>
                 <a href="" class="butn">Read More</a>
             </div>
@@ -19,8 +19,7 @@
 <app-offers></app-offers>
 <app-services></app-services>
 <app-aboutus></app-aboutus>
-<app-process></app-process>
-<app-packs></app-packs>      
+<app-process></app-process>   
 
        
 <app-details></app-details>
