--- a/src/app/home/packs/packs.component.html
+++ b/src/app/home/packs/packs.component.html
@@ -18,7 +18,7 @@
 
                             <div class="card-body p-4 position-relative">
                                 <h3 class="h5 mb-3">Personal Loan @10.75%</h3>
-                                <h6 class="mb-3 text-primary">Low Cost</h6>
+                                <h6 class="mb-3 colorban">Low Cost</h6>
                                 <a href="#!" class="butn small">Apply Now</a>
                             </div>
                         </div>
@@ -29,7 +29,7 @@
 
                             <div class="card-body p-4 position-relative">
                                 <h3 class="h5 mb-3">Business Loan @11.65%</h3>
-                                <h6 class="mb-3 text-primary">Lowest Interest</h6>
+                                <h6 class="mb-3 colorban">Lowest Interest</h6>
                                 <a href="#!" class="butn small">Apply Now</a>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
 
                             <div class="card-body p-4 position-relative">
                                 <h3 class="h5 mb-3">Home Loan @7.75%</h3>
-                                <h6 class="mb-3 text-primary">Rate of Interest</h6>
+                                <h6 class="mb-3 colorban">Rate of Interest</h6>
                                 <a href="#!" class="butn small">Apply Now</a>
                             </div>
                         </div>
@@ -51,7 +51,7 @@
 
                             <div class="card-body p-4 position-relative">
                                 <h3 class="h5 mb-3">Education Loan @5.15%</h3>
-                                <h6 class="mb-3 text-primary">Low Cost</h6>
+                                <h6 class="mb-3 colorban">Low Cost</h6>
                                 <a href="#!" class="butn small">Apply Now</a>
                             </div>
                         </div>
