--- a/src/app/home/partners/partners.component.html
+++ b/src/app/home/partners/partners.component.html
@@ -1,15 +1,13 @@
-        <!-- TESTIMONIALS
-        ================================================== -->
-        <section>
+        <section id="partners">
             <div class="container">
                 <div class="row mb-2-3 mb-md-6">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <div class="main-title">Testimonials
+                            <div class="main-title">Our Partners
                                 <span class="line-left"></span>
                                 <span class="line-right"></span>
                             </div>
-                            <h2 class="w-md-80 w-lg-50 mb-0 mx-auto">We have appreciated by our clients!</h2>
+                            <h2 class="w-md-80 w-lg-50 mb-0 mx-auto">Meet Our Lifelong Bank Partners!</h2>
                         </div>
                     </div>
                 </div>
