--- a/src/app/home/services/services.component.html
+++ b/src/app/home/services/services.component.html
@@ -23,7 +23,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="service-inner">
-                                    <div class="lh-1"><i class="ti-credit-card display-15 text-primary"></i></div>
+                                    <div class="lh-1"><i class="ti-credit-card display-15 colorban"></i></div>
                                     <h3 class="h5 mb-0 ms-3"><a href="#!" class="text-white">Personal Loan</a></h3>
                                 </div>
                                 <div>
@@ -42,7 +42,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="service-inner">
-                                    <div class="lh-1"><i class="ti-pencil-alt display-15 text-primary"></i></div>
+                                    <div class="lh-1"><i class="ti-pencil-alt display-15 colorban"></i></div>
                                     <h3 class="h5 mb-0 ms-3"><a href="#!" class="text-white">Education Loan</a></h3>
                                 </div>
                                 <div>
@@ -61,7 +61,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="service-inner">
-                                    <div class="lh-1"><i class="ti-zip display-15 text-primary"></i></div>
+                                    <div class="lh-1"><i class="ti-zip display-15 colorban"></i></div>
                                     <h3 class="h5 mb-0 ms-3"><a href="#!" class="text-white">Business Loan</a></h3>
                                 </div>
                                 <div>
