--- a/src/app/home/topbar/topbar.component.html
+++ b/src/app/home/topbar/topbar.component.html
@@ -124,7 +124,7 @@
                             <div class="attr-nav">
                                 <ul>
                                     <li class="search"><a href="#!"><i class="fas fa-search"></i></a></li>
-                                    <li class="d-none d-lg-inline-block"><a href="#!" class="butn small">Apply Now</a></li>
+                                    <li class="d-none d-lg-inline-block"><a [routerLink]="['/login']" class="butn small">Apply Now</a></li>
                                 </ul>
                             </div>
                             <!-- end attribute navigation -->
