--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -49,7 +49,7 @@
                         <p class="mb-1-6 text-white">We provide loan, along with the group and business as well.</p>
                         <div class="media mb-3 align-items-center">
                             <div class="me-3">
-                                <i class="far fa-envelope text-primary display-25"></i>
+                                <i class="far fa-envelope colorban display-25"></i>
                             </div>
                             <div class="media-body align-self-center">
                                 <p class="text-white mb-0">info@yourdomain.com</p>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="media mb-3 align-items-center">
                             <div class="me-3">
-                                <i class="fas fa-mobile-alt text-primary display-25"></i>
+                                <i class="fas fa-mobile-alt colorban display-25"></i>
                             </div>
                             <div class="media-body align-self-center">
                                 <p class="text-white mb-0">(+44) 123 456 789</p>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="media">
                             <div class="me-3">
-                                <i class="fas fa-map-marker-alt text-primary display-25"></i>
+                                <i class="fas fa-map-marker-alt colorban display-25"></i>
                             </div>
                             <div class="media-body align-self-center">
                                 <p class="text-white mb-0">66 Guild Street 512B, Great North Town.</p>
@@ -98,14 +98,14 @@
                             <img src="../../../assets/img/content/footer-thumb1.jpg" class="rounded" alt="...">
                             <div class="media-body ms-4">
                                 <h4 class="mb-2 h6"><a href="#!" class="text-white">We’re providing the quality services</a></h4>
-                                <span class="text-primary small">23 Mar. 2021</span>
+                                <span class="colorban small">23 Mar. 2021</span>
                             </div>
                         </div>
                         <div class="media">
                             <img src="../../../assets/img/content/footer-thumb2.jpg" class="rounded" alt="...">
                             <div class="media-body ms-4">
                                 <h4 class="mb-2 h6"><a href="#!" class="text-white">Great thoughts out of your company’s assets</a></h4>
-                                <span class="text-primary small">20 Mar. 2021</span>
+                                <span class="colorban small">20 Mar. 2021</span>
                             </div>
                         </div>
                     </div>
@@ -115,14 +115,14 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 text-center text-md-start mt-3 mt-md-0 order-2 order-md-1">
-                            <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Loan Powered by <a href="https://www.chitrakootweb.com/" target="_blank" class="text-primary">Chitrakoot Web</a></p>
+                            <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Bank Powered By <a href="https://bfigroupe.com/" target="_blank" class="colorban">BFI Group</a></p>
                         </div>
                         <div class="col-md-6 text-md-end order-1 order-md-2">
                             <ul class="social-icon-style1">
-                                <li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.facebook.com/bfigoupe" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#!"><i class="fab fa-twitter"></i></a></li>
                                 <li><a href="#!"><i class="fab fa-youtube"></i></a></li>
-                                <li><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/bfigroupe/mycompany/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
