--- a/src/app/home/process/process.component.html
+++ b/src/app/home/process/process.component.html
@@ -16,7 +16,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>1</span>
-                                <i class="ti-desktop display-18 text-primary d-block mb-3"></i>
+                                <i class="ti-desktop display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">Apply Online</h3>
                                 <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
                                 <a href="#!" class="butn small">Apply Now</a>
@@ -27,7 +27,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>2</span>
-                                <i class="ti-file display-18 text-primary d-block mb-3"></i>
+                                <i class="ti-file display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">Complete Form</h3>
                                 <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
                                 <a href="#!" class="butn small">Apply Now</a>
@@ -38,7 +38,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>3</span>
-                                <i class="ti-agenda display-18 text-primary d-block mb-3"></i>
+                                <i class="ti-agenda display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">Submit Form</h3>
                                 <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
                                 <a href="#!" class="butn small">Apply Now</a>
@@ -49,7 +49,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>4</span>
-                                <i class="ti-check-box display-18 text-primary d-block mb-3"></i>
+                                <i class="ti-check-box display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">Get approved</h3>
                                 <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
                                 <a href="#!" class="butn small">Apply Now</a>
