--- a/src/assets/css/plugins.css
+++ b/src/assets/css/plugins.css
@@ -5,7 +5,7 @@
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
 */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap");:root {
-    --bs-blue: #0d6efd;
+    --bs-blue: #C2862D ;
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1;
     --bs-pink: #d63384;
@@ -18,7 +18,7 @@
     --bs-white: #fff;
     --bs-gray: #6c757d;
     --bs-gray-dark: #343a40;
-    --bs-primary: #0d6efd;
+    --bs-primary: #C2862D ;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
@@ -194,7 +194,7 @@ sup {
 }
 
 a {
-    color: #0d6efd;
+    color: #C2862D;
     text-decoration: underline
 }
 
@@ -2361,8 +2361,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .form-check-input:checked[type=checkbox] {
@@ -2374,8 +2374,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type=checkbox]:indeterminate {
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: #C2862D;
+    border-color: #C2862D;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e")
 }
 
@@ -2464,7 +2464,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -.25rem;
-    background-color: #0d6efd;
+    background-color: #C2862D;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -2497,7 +2497,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #0d6efd;
+    background-color: #C2862D;
     border: 0;
     border-radius: 1rem;
     -moz-transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -2904,8 +2904,8 @@ textarea.form-control-lg {
 
 .btn-primary {
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .btn-primary:hover {
@@ -2933,8 +2933,8 @@ textarea.form-control-lg {
 
 .btn-primary.disabled,.btn-primary:disabled {
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .btn-secondary {
@@ -3183,14 +3183,14 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-    color: #0d6efd;
-    border-color: #0d6efd
+    color: #C2862D;
+    border-color: #C2862D
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .btn-check:focus+.btn-outline-primary,.btn-outline-primary:focus {
@@ -3199,8 +3199,8 @@ textarea.form-control-lg {
 
 .btn-check:active+.btn-outline-primary,.btn-check:checked+.btn-outline-primary,.btn-outline-primary.active,.btn-outline-primary.dropdown-toggle.show,.btn-outline-primary:active {
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .btn-check:active+.btn-outline-primary:focus,.btn-check:checked+.btn-outline-primary:focus,.btn-outline-primary.active:focus,.btn-outline-primary.dropdown-toggle.show:focus,.btn-outline-primary:active:focus {
@@ -3208,7 +3208,7 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary.disabled,.btn-outline-primary:disabled {
-    color: #0d6efd;
+    color: #C2862D;
     background-color: transparent
 }
 
@@ -3424,7 +3424,7 @@ textarea.form-control-lg {
 
 .btn-link {
     font-weight: 400;
-    color: #0d6efd;
+    color: #C2862D;
     text-decoration: underline
 }
 
@@ -3757,7 +3757,7 @@ textarea.form-control-lg {
 .dropdown-item.active,.dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #0d6efd
+    background-color: #C2862D
 }
 
 .dropdown-item.disabled,.dropdown-item:disabled {
@@ -3802,7 +3802,7 @@ textarea.form-control-lg {
 
 .dropdown-menu-dark .dropdown-item.active,.dropdown-menu-dark .dropdown-item:active {
     color: #fff;
-    background-color: #0d6efd
+    background-color: #C2862D
 }
 
 .dropdown-menu-dark .dropdown-item.disabled,.dropdown-menu-dark .dropdown-item:disabled {
@@ -3918,7 +3918,7 @@ textarea.form-control-lg {
 .nav-link {
     display: block;
     padding: .5rem 1rem;
-    color: #0d6efd;
+    color: #C2862D;
     text-decoration: none;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out
 }
@@ -3982,7 +3982,7 @@ textarea.form-control-lg {
 
 .nav-pills .nav-link.active,.nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #0d6efd
+    background-color: #C2862D
 }
 
 .nav-fill .nav-item,.nav-fill>.nav-link {
@@ -4707,7 +4707,7 @@ textarea.form-control-lg {
 .page-link {
     position: relative;
     display: block;
-    color: #0d6efd;
+    color: #C2862D;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #dee2e6;
@@ -4742,8 +4742,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .page-item.disabled .page-link {
@@ -4956,7 +4956,7 @@ textarea.form-control-lg {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #0d6efd;
+    background-color: #C2862D;
     transition: width .6s ease
 }
 
@@ -5048,8 +5048,8 @@ textarea.form-control-lg {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd
+    background-color: #C2862D;
+    border-color: #C2862D
 }
 
 .list-group-item+.list-group-item {
@@ -6405,7 +6405,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-    color: #0d6efd
+    color: #C2862D
 }
 
 .link-primary:focus,.link-primary:hover {
@@ -6829,7 +6829,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-    border-color: #0d6efd !important
+    border-color: #C2862D !important
 }
 
 .border-secondary {
@@ -7275,7 +7275,8 @@ textarea.form-control-lg {
 }
 
 .me-1 {
-    margin-right: 0.25rem !important
+    margin-right: 0.25rem !important ;
+    
 }
 
 .me-2 {
@@ -7656,7 +7657,7 @@ textarea.form-control-lg {
 }
 
 .text-primary {
-    color: #0d6efd !important
+    color: #C2862D !important
 }
 
 .text-secondary {
@@ -7712,7 +7713,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-    background-color: #0d6efd !important
+    background-color: #C2862D !important
 }
 
 .bg-secondary {
@@ -24269,7 +24270,8 @@ h1 a,h2 a,h3 a,h4 a,h5 a,h6 a,.h1 a,.h2 a,.h3 a,.h4 a,.h5 a,.h6 a {
 }
 
 .display-31 {
-    font-size: 0.8rem
+    font-size: 0.8rem ;
+    color : #909090  !important;
 }
 
 .display-32 {
