--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -3,7 +3,7 @@
 
 
 <app-topbar></app-topbar>
-<section class="bg-img cover-background full-screen top-position1 p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.jpg">
+<section id="banner" class="bg-img cover-background full-screen top-position1 p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.jpg">
 
     <div class="container d-flex flex-column">
         <div class="row align-items-center min-vh-100">
