--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -30,7 +30,7 @@
 <app-footer></app-footer>
 
 
-<div class="all-demo alt-font d-none d-lg-inline-block"><i class="far fa-envelope"></i><span>Quick Question?</span></div>
+<div class="all-demo alt-font d-none d-lg-inline-block"></div>
 <a class="scroll-to-top" (click)="scrollToTop('topbar')"><i class="fas fa-angle-up" aria-hidden="true"></i></a>
 
 
