--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -1,1 +1,59 @@
-<p>signup works!</p>
+<section id="topbar" class="d-flex align-items-center">
+    <div class="container d-flex justify-content-center justify-content-md-between">
+      <div class="contact-info d-flex align-items-center">
+        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@bfibank.com</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +216 99 777 888
+      </div>
+      <div class="social-links d-none d-md-block">
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
+    </div>
+  </section>
+
+  <section id="banner" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.jpg">
+    <div class="container d-flex flex-column">
+        <div class="row align-items-center min-vh-80">
+            <div class="main-card">
+                <h2>Rejoignez-nous en tant que</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="/particulier" class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Particulier</h5>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/professionnel" class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Professionnel</h5>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/organisation" class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Organisation</h5>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="copyright" class="d-flex align-items-center">
+    <div class="container d-flex justify-content-center justify-content-md-between">
+        <div id="copyright-content">
+            <i class="bi bi-c-circle"></i>
+            <span>{{ currentYear }}</span> BFI bank
+        </div>
+    </div>
+</section>
+
+
+
