--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -174,7 +174,7 @@ a:hover,a:active {
 
 .butn {
     color: #fff;
-    background: #909090;
+    background: rgb(26, 26, 26);
     text-align: center !important;
     display: inline-block;
     padding: 13px 40px;
@@ -192,7 +192,7 @@ a:hover,a:active {
     left: 0;
     bottom: 0;
     right: 0;
-    background: #C2862D;
+    background: rgba(97, 97, 97, 0.5);
     transform-origin: right center;
     transform: scale(0, 1);
     transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
