--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -22,13 +22,27 @@
                          <form onsubmit="event.preventDefault()" class="box">
                              <h1>Login</h1>
                               <p class="box-text">
-                                 Please enter your login and password!</p> 
-                                 <input type="text" name="" placeholder="Username"> 
-                                 <input type="password" name="" placeholder="Password"> 
-                                 <a class="forgot box-text" href="#">Forgot password?</a> 
+                                 Entrez vos coordonnées pour se connecter.</p> 
+                                 <input type="text" name="" placeholder="Identifiant"> 
+                                 <input type="password" name="" placeholder="Mot de passe"> 
+                                 <a class="forgot box-text" href="#">Mot de passe oublié?</a> 
                                  <input type="submit" name="" value="Login" href="#"> 
-                                 <div class="col-md-12"> <ul class="social-network social-circle"> 
-                                    <li><a href="#" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a></li> <li><a href="#" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a></li> <li><a href="#" class="icoGoogle" title="Google +"><i class="fab fa-google-plus"></i></a></li> </ul> </div> </form> </div> </div> </div>
+                                 <div class="col-md-12"> 
+                                  <ul class="social-network social-circle"> 
+                                    <li><a href="#" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                    </li> 
+                                    <li><a href="#" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a>
+                                    </li> 
+                                    <li><a href="#" class="icoGoogle" title="Google +"><i class="fab fa-google-plus"></i></a>
+                                    </li> 
+                                  </ul> 
+                                </div> 
+                                <p class="box-text">Vous n'avez pas de compte ? <a class="forgot box-text" href="/signup">Créer un compte
+                                </a> </p>
+                              </form> 
+                            </div> 
+                          </div> 
+                        </div>
         </div>
         </div>
 
