--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   </section>
-  <section id="banner" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.jpg">
+  <section id="banner" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.png">
     <div class="container d-flex flex-column justify-content-center align-items-center">
         <div class="main-card">
             <h2>Rejoignez-nous en tant que</h2>
