--- a/src/assets/css/plugins.css
+++ b/src/assets/css/plugins.css
@@ -25171,7 +25171,7 @@ section.md {
 }
 
 .banner{
-    background-image: url("../img/banner/slide1.jpg")!important;
+    background-image: url("../img/banner/slide1.png")!important;
 }
 .banner2{
     background-image: url("../img/bg/bg-01.jpg")!important;
