--- a/src/app/home/aboutus/aboutus.component.html
+++ b/src/app/home/aboutus/aboutus.component.html
@@ -11,14 +11,14 @@
                             </div>
                             <div class="about-box">
                                 <h3 class="h1 text-white">38</h3>
-                                <p class="mb-0 text-white">Years of Experience</p>
+                                <p class="mb-0 text-white">Années d'expérience</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 ps-lg-4 ps-xl-7">
                         <div class="content-box">
-                            <div class="main-title title-left">About Us<span class="line-left"></span></div>
-                            <h2 class="w-lg-90 mb-1-6 mb-lg-1-9">Private venture loans for a day by day expenses</h2>
+                            <div class="main-title title-left">À propos de nous<span class="line-left"></span></div>
+                            <h2 class="w-lg-90 mb-1-6 mb-lg-1-9">Prêts à capital-risque privés pour les dépenses quotidiennes</h2>
                             <p class="mb-1-9 mb-lg-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                             <div class="row border-md-bottom clearfix pb-md-5 mb-5 mb-md-7">
                                 <div class="tab-style1 horizontaltab">
