--- a/src/app/home/counter/counter.component.html
+++ b/src/app/home/counter/counter.component.html
@@ -6,25 +6,25 @@
                     <div class="col-sm-6 col-lg-3 mt-1-9">
                         <div class="text-center">
                             <h3 class="text-white h1 countup">3472</h3>
-                            <span class="text-white">Projects Done</span>
+                            <span class="text-white">Projets réalisés</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3 mt-1-9">
                         <div class="text-center">
                             <h3 class="text-white h1"><span class="countup">156</span>K</h3>
-                            <span class="text-white">Loan Increase</span>
+                            <span class="text-white">Augmentation du prêt</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3 mt-1-9">
                         <div class="text-center">
                             <h3 class="text-white h1"><span class="countup">5.60</span>%</h3>
-                            <span class="text-white">Offer Low Interest</span>
+                            <span class="text-white">Offrez un faible intérêt</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3 mt-1-9">
                         <div class="text-center">
                             <h3 class="text-white h1"><span class="countup">100</span>%</h3>
-                            <span class="text-white">Happy Clients</span>
+                            <span class="text-white">Clients satisfaits</span>
                         </div>
                     </div>
                 </div>
