--- a/src/app/home/details/details.component.html
+++ b/src/app/home/details/details.component.html
@@ -11,7 +11,7 @@
                     <div class="col-lg-6">
                         <div class="ps-lg-6 ps-xl-10 w-lg-90">
                             <div class="mb-4">
-                                <div class="main-title title-left">Getting a Loan<span class="line-left"></span></div>
+                                <div class="main-title title-left">Obtenir un prêt<span class="line-left"></span></div>
                                 <h2 class="w-90">The greater part of the people trust on us</h2>
                             </div>
                             <p class="mb-4">
