--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -6,7 +6,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6">
                             <div class="mb-4 mb-xl-0">
-                                <h2 class="text-white mb-0">Subscribe your email for newsletter</h2>
+                                <h2 class="text-white mb-0">Abonnez-vous à votre email pour la newsletter</h2>
                             </div>
                         </div>
                         <div class="col-xl-6">
@@ -29,7 +29,7 @@
                                         <!-- Begin Submit button -->
                                         <div class="col-md-4">
                                             <div class="quform-submit-inner">
-                                                <button class="butn m-0 d-block w-100" type="submit"><span>Subscribe</span></button>
+                                                <button class="butn m-0 d-block w-100" type="submit"><span>S'abonner</span></button>
                                             </div>
                                             <div class="quform-loading-wrap text-start"><span class="quform-loading"></span></div>
                                         </div>
@@ -45,8 +45,8 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-lg-4 pe-md-5 mb-2-5 mb-lg-0">
-                        <h3 class="text-white h4 mb-4">About</h3>
-                        <p class="mb-1-6 text-white">We provide loan, along with the group and business as well.</p>
+                        <h3 class="text-white h4 mb-4">À propos</h3>
+                        <p class="mb-1-6 text-white">Nous accordons également des prêts au groupe et aux entreprises.</p>
                         <div class="media mb-3 align-items-center">
                             <div class="me-3">
                                 <i class="far fa-envelope colorban display-25"></i>
@@ -73,38 +73,38 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-2 mb-2-5 mb-lg-0 ps-lg-5">
-                        <h3 class="text-white h4 mb-4">Link</h3>
+                        <h3 class="text-white h4 mb-4">Lien</h3>
                         <ul class="footer-link mb-0 list-unstyled">
-                            <li class="mb-3"><a href="about.html">About</a></li>
-                            <li class="mb-3"><a href="how-it-work.html">How it Works</a></li>
-                            <li class="mb-3"><a href="team.html">Our Team</a></li>
+                            <li class="mb-3"><a href="about.html">À propos</a></li>
+                            <li class="mb-3"><a href="how-it-work.html">Comment ça fonctionne</a></li>
+                            <li class="mb-3"><a href="team.html">Notre équipe</a></li>
                             <li class="mb-3"><a href="faq's.html">FAQ</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-lg-3 mb-2-5 mb-sm-0 ps-lg-8">
-                        <h3 class="text-white h4 mb-4">Explore</h3>
+                        <h3 class="text-white h4 mb-4">Explorer</h3>
                         <ul class="footer-link mb-0 list-unstyled">
-                            <li class="mb-3"><a href="#!">Car Loan</a></li>
-                            <li class="mb-3"><a href="#!">Personal Loan</a></li>
-                            <li class="mb-3"><a href="#!">Business Loan</a></li>
-                            <li class="mb-3"><a href="#!">Education Loan</a></li>
-                            <li><a href="#!">Home Equity</a></li>
+                            <li class="mb-3"><a href="#!">Prêt automobile</a></li>
+                            <li class="mb-3"><a href="#!">Prêt Personel</a></li>
+                            <li class="mb-3"><a href="#!">Prêt commercial</a></li>
+                            <li class="mb-3"><a href="#!">Prêt Educatif</a></li>
+                            <li><a href="#!">L'équité de la maison</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-lg-3">
-                        <h3 class="text-white h4 mb-4">Recent News</h3>
+                        <h3 class="text-white h4 mb-4">Actualités</h3>
                         <div class="media mb-1-6">
                             <img src="../../../assets/img/content/footer-thumb1.jpg" class="rounded" alt="...">
                             <div class="media-body ms-4">
-                                <h4 class="mb-2 h6"><a href="#!" class="text-white">We’re providing the quality services</a></h4>
+                                <h4 class="mb-2 h6"><a href="#!" class="text-white">Nous fournissons des services de qualité</a></h4>
                                 <span class="colorban small">23 Mar. 2021</span>
                             </div>
                         </div>
                         <div class="media">
                             <img src="../../../assets/img/content/footer-thumb2.jpg" class="rounded" alt="...">
                             <div class="media-body ms-4">
-                                <h4 class="mb-2 h6"><a href="#!" class="text-white">Great thoughts out of your company’s assets</a></h4>
+                                <h4 class="mb-2 h6"><a href="#!" class="text-white">De bonnes pensées sur les actifs de votre entreprise</a></h4>
                                 <span class="colorban small">20 Mar. 2021</span>
                             </div>
                         </div>
