--- a/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
+++ b/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
@@ -1,1 +1,39 @@
-<p>offres-et-domicialisation works!</p>
+<div class="card">
+    <div class="card-head">
+        <h4>Offres et Domiciliation</h4>
+    </div>
+    <div class="card-body">
+        <form class="row g-3" #form="ngForm">
+            <div class="col-12">
+                <p>Choisissez votre agence de préférence.</p>
+                <label for="agence">Agence :</label>
+                <select id="agence">
+                    <option value="agence_moanda">AGENCE DE MOANDA</option>
+                </select>
+            </div>
+            <div class="col-12">
+                <p>Choisissez votre compte</p>
+                <div class="row">
+                    <div class="col-md-4 mb-3" *ngFor="let compte of comptes">
+                        <div class="card" (click)="selectCompte(compte.value)">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ compte.label }}</h5>
+                                <p class="card-text">Description du {{ compte.label.toLowerCase() }}.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="row">
+                    <div class="col text-start">
+                        <button class="btn btn-secondary" (click)="Retour()">Retour</button>
+                    </div>
+                    <div class="col text-end">
+                        <button class="btn btn-dark" (click)="Suivant()">Suivant</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
