--- a/src/app/home/blog/blog.component.html
+++ b/src/app/home/blog/blog.component.html
@@ -5,8 +5,8 @@
             <div class="container">
                 <div class="row align-items-end mb-2-3 mb-md-6">
                     <div class="col-lg-5 mb-3 mb-lg-0">
-                        <div class="main-title title-left">Latest News<span class="line-left"></span></div>
-                        <h2 class="w-90">We're here to share story and news</h2>
+                        <div class="main-title title-left">Dernières nouvelles<span class="line-left"></span></div>
+                        <h2 class="w-90">Nous sommes ici pour partager des histoires et des nouvelles</h2>
                     </div>
                     <div class="col-lg-7">
                         <p class="mb-0">Advances at appealing financing costs with higher credit qualification and lower EMI. credit is the loaning of cash by at least one people, associations, or different substances to others, associations. Apply now to get snappy endorsement of best advance administrations.</p>
