transalted homepage using angular i18n library

--- a/src/app/home/details/details.component.html
+++ b/src/app/home/details/details.component.html
@@ -1,4 +1,4 @@
- <!-- GETTING A LOAN
+ <!-- 
         ================================================== -->
         <section class="bg-light">
             <div class="container">
@@ -11,45 +11,45 @@
                     <div class="col-lg-6">
                         <div class="ps-lg-6 ps-xl-10 w-lg-90">
                             <div class="mb-4">
-                                <div class="main-title title-left">Getting a Loan<span class="line-left"></span></div>
-                                <h2 class="w-90">The greater part of the people trust on us</h2>
+                                <div class="main-title title-left">{{ 'homepage.details.gettingLoan' | translate }}<span class="line-left"></span></div>
+                                <h2 class="w-90">{{ 'homepage.details.subheading' | translate }}</h2>
                             </div>
                             <p class="mb-4">
-                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                                {{ 'homepage.details.description' | translate }}
                             </p>
                             <div id="accordion" class="accordion-style">
                                 <div class="card mb-3">
                                     <div class="card-header" id="headingOne">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Check Your Rate</button>
+                                            <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">{{ 'homepage.details.checkYourRate' | translate }}</button>
                                         </h5>
                                     </div>
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
-                                        <div class="card-body position-relative">you should test your credit score rating earlier than making use of for a personal loan.
+                                        <div class="card-body position-relative">{{ 'homepage.details.checkDesc' | translate }}
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card mb-3">
                                     <div class="card-header" id="headingTwo">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Choose Your Loan</button>
+                                            <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">{{ 'homepage.details.chooseYourLoan' | translate }}</button>
                                         </h5>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
                                         <div class="card-body position-relative">
-                                            Choose the provide with the phrases that paintings satisfactory for you.
+                                            {{ 'homepage.details.chooseDesc' | translate }}
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingThree">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Get Your Funds</button>
+                                            <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">{{ 'homepage.details.getYourFunds' | translate }}</button>
                                         </h5>
                                     </div>
                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
                                         <div class="card-body position-relative">
-                                            Your cash is going instantly in your financial institution account through direct deposit.
+                                            {{ 'homepage.details.getDesc' | translate }}
                                         </div>
                                     </div>
                                 </div>
