--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -8,8 +8,8 @@
     <div class="container d-flex flex-column">
         <div class="row align-items-center min-vh-100">
             <div class="col-md-10 col-lg-7 col-xl-8 mt-5 mt-lg-0">
-                <h1 class="text-white display-16 display-sm-14 display-md-9 display-lg-7 display-xl-3 lh-1 mb-2-3 text-shadow"><span class="fw-bolder">Building a brilliant</span> monetary future</h1>
-                <a href="" class="butn">Read More</a>
+                <h1 class="text-white display-16 display-sm-14 display-md-9 display-lg-7 display-xl-3 lh-1 mb-2-3 text-shadow"><span class="fw-bolder">{{ 'homepage.heading' | translate }}</span><br>{{ 'homepage.subheading' | translate }}</h1>
+                <a href="" class="butn">{{ 'homepage.button' | translate }}</a>
             </div>
         </div>
     </div>
