--- a/src/app/home/offers/offers.component.html
+++ b/src/app/home/offers/offers.component.html
@@ -7,7 +7,7 @@
                         <div class="media align-items-center">
                             <img src="../../../assets/img/content/icon1.png" alt="...">
                             <div class="media-body ms-3">
-                                <h4 class="mb-0 text-white h5">Fast Approvals</h4>
+                                <h4 class="mb-0 text-white h5">{{ 'homepage.offers.title1' | translate }}</h4>
                             </div>
                         </div>
                     </div>
@@ -15,7 +15,7 @@
                         <div class="media align-items-center">
                             <img src="../../../assets/img/content/icon2.png" alt="...">
                             <div class="media-body ms-3">
-                                <h4 class="mb-0 text-white h5">300,000 Customers</h4>
+                                <h4 class="mb-0 text-white h5">{{ 'homepage.offers.title2' | translate }}</h4>
                             </div>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                         <div class="media align-items-center">
                             <img src="../../../assets/img/content/icon3.png" alt="...">
                             <div class="media-body ms-3">
-                                <h4 class="mb-0 text-white h5">Flexible payments</h4>
+                                <h4 class="mb-0 text-white h5">{{ 'homepage.offers.title3' | translate }}</h4>
                             </div>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
                         <div class="media align-items-center">
                             <img src="../../../assets/img/content/icon4.png" alt="...">
                             <div class="media-body ms-3">
-                                <h4 class="mb-0 text-white h5">No Prepayment Fees</h4>
+                                <h4 class="mb-0 text-white h5">{{ 'homepage.offers.title4' | translate }}</h4>
                             </div>
                         </div>
                     </div>
