--- a/src/app/home/partners/partners.component.html
+++ b/src/app/home/partners/partners.component.html
@@ -3,11 +3,11 @@
                 <div class="row mb-2-3 mb-md-6">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <div class="main-title">Our Partners
+                            <div class="main-title">{{ 'homepage.partners.title' | translate }}
                                 <span class="line-left"></span>
                                 <span class="line-right"></span>
                             </div>
-                            <h2 class="w-md-80 w-lg-50 mb-0 mx-auto">Meet Our Lifelong Bank Partners!</h2>
+                            <h2 class="w-md-80 w-lg-50 mb-0 mx-auto">{{ 'homepage.partners.subheading' | translate }}</h2>
                         </div>
                     </div>
                 </div>
@@ -15,13 +15,13 @@
                     <div class="px-3 px-lg-5">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-lg-6 order-2 order-lg-1">
-                                <p class="mb-4 mb-lg-5 lead">Loan is great. If you aren't sure, always go for loan. It's really wonderful. I don't know what else to say. Great job, I will definitely be ordering again! Loan was the best investment I ever made. Thanks guys, keep up the good work!</p>
-                                <h3 class="h5 text-secondary mb-2">Derek Clark</h3>
-                                <span class="display-28">Branch Lending Officer</span>
+                                <p class="mb-4 mb-lg-5 lead">{{ 'homepage.partners.partner1.testimonial' | translate }}</p>
+                                <h3 class="h5 text-secondary mb-2">{{ 'homepage.partners.partner1.name' | translate }}</h3>
+                                <span class="display-28">{{ 'homepage.partners.partner1.role' | translate }}</span>
                             </div>
                             <div class="col-lg-3 order-1 order-lg-2 mb-4 mb-lg-0">
                                 <div class="user-img overflow-visible text-lg-end">
-                                    <img src="../../../assets/img/avatars/avatar-01.jpg" class="rounded-circle" alt="...">
+                                    <img src="../../../assets/img/avatars/avatar-01.png" class="rounded-circle" alt="...">
                                     <span class="quote position-relative">
                                                     <i class="ti-quote-right text-primary"></i>
                                                 </span>
@@ -32,9 +32,9 @@
                     <div class="px-3 px-lg-5">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-lg-6 order-2 order-lg-1">
-                                <p class="mb-4 mb-lg-5 lead">I would also like to say thank you to all your staff. Loan is exactly what our business has been lacking. It's incredible. I wish I would have thought of it first. Thanks to loan, we've just launched our 5th website! It's really wonderful.</p>
-                                <h3 class="h5 text-secondary mb-2">Patrick Williams</h3>
-                                <span class="display-28">Loan Reviewer</span>
+                                <p class="mb-4 mb-lg-5 lead">{{ 'homepage.partners.partner2.testimonial' | translate }}</p>
+                                <h3 class="h5 text-secondary mb-2">{{ 'homepage.partners.partner2.name' | translate }}</h3>
+                                <span class="display-28">{{ 'homepage.partners.partner2.role' | translate }}</span>
                             </div>
                             <div class="col-lg-3 order-1 order-lg-2 mb-4 mb-lg-0">
                                 <div class="user-img overflow-visible text-lg-end">
@@ -49,9 +49,9 @@
                     <div class="px-3 px-lg-5">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-lg-6 order-2 order-lg-1">
-                                <p class="mb-4 mb-lg-5 lead">I have gotten at least 50 times the value from loan. Absolutely wonderful! Man, this thing is getting better and better as I learn more about it. Loan is worth much more than I paid.</p>
-                                <h3 class="h5 text-secondary mb-2">Laurence Coleman</h3>
-                                <span class="display-28">Commercial Lender</span>
+                                <p class="mb-4 mb-lg-5 lead">{{ 'homepage.partners.partner3.testimonial' | translate }}</p>
+                                <h3 class="h5 text-secondary mb-2">{{ 'homepage.partners.partner3.name' | translate }}</h3>
+                                <span class="display-28">{{ 'homepage.partners.partner3.role' | translate }}</span>
                             </div>
                             <div class="col-lg-3 order-1 order-lg-2 mb-4 mb-lg-0">
                                 <div class="user-img overflow-visible text-lg-end">
