--- a/src/app/home/process/process.component.html
+++ b/src/app/home/process/process.component.html
@@ -4,12 +4,10 @@
             <div class="container">
                 <div class="row align-items-end mb-7 mb-md-10 position-relative">
                     <div class="col-lg-5 mb-3 mb-lg-0">
-                        <div class="main-title white title-left text-white">Apply Process<span class="line-left"></span></div>
-                        <h2 class="w-md-90 text-white mb-0">We have a straightforward on the web application</h2>
+                        <div class="main-title white title-left text-white">{{ 'homepage.applicationProcess.title' | translate }}<span class="line-left"></span></div>
+                        <h2 class="w-md-90 text-white mb-0">{{ 'homepage.applicationProcess.subheading' | translate }}</h2>
                     </div>
-                    <div class="col-lg-7">
-                        <p class="mb-0 text-white">Advances at appealing financing costs with higher credit qualification and lower EMI. credit is the loaning of cash by at least one people, associations, or different substances to others, associations. Apply now to get snappy endorsement of best advance administrations.</p>
-                    </div>
+
                 </div>
                 <div class="row mt-n2-9">
                     <div class="col-sm-6 col-xl-3 mt-2-9">
@@ -17,9 +15,9 @@
                             <div class="card-body">
                                 <span>1</span>
                                 <i class="ti-desktop display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">Apply Online</h3>
-                                <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
-                                <a href="#!" class="butn small">Apply Now</a>
+                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.online.step' | translate }}</h3>
+                                <p class="mb-4">{{ 'homepage.applicationProcess.steps.online.description' | translate }}</p>
+                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -28,9 +26,9 @@
                             <div class="card-body">
                                 <span>2</span>
                                 <i class="ti-file display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">Complete Form</h3>
-                                <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
-                                <a href="#!" class="butn small">Apply Now</a>
+                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.form.step' | translate }}</h3>
+                                <p class="mb-4">{{ 'homepage.applicationProcess.steps.form.description' | translate }}</p>
+                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -39,9 +37,9 @@
                             <div class="card-body">
                                 <span>3</span>
                                 <i class="ti-agenda display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">Submit Form</h3>
-                                <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
-                                <a href="#!" class="butn small">Apply Now</a>
+                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.submit.step' | translate }}</h3>
+                                <p class="mb-4">{{ 'homepage.applicationProcess.steps.submit.description' | translate }}</p>
+                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -50,9 +48,9 @@
                             <div class="card-body">
                                 <span>4</span>
                                 <i class="ti-check-box display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">Get approved</h3>
-                                <p class="mb-4">The higher your score the better are the odds of your advance application getting endorsed.</p>
-                                <a href="#!" class="butn small">Apply Now</a>
+                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.approve.step' | translate }}</h3>
+                                <p class="mb-4">{{ 'homepage.applicationProcess.steps.approve.description' | translate }}</p>
+                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
